<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GCM_Client</string>
    <string name="app_name2">배달의정의</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>

    <string name="server_name">Choose Server</string>
    <string name="udid">Edit UDID</string>
    <string name="mccmnc">Edit MCC/MNC</string>
    <string name="model_name">Edit Model</string>
    <string name="os_version">Edit OS</string>

    <string name="secondActivityText">두번째 액티비티 화면입니다. 아래 버튼을 누르시면 액티비가 종료됩니다.</string>
    <string name="terminateActivity">액티비티 종료하기</string>

    <string name="planet_prompt">Choose a planet</string>

    <string name="title_activity_scaffold">ScaffoldActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>